--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,9 +1,12 @@
 .header  {
+  display: flex;
+  justify-content: space-between;
   font-family: monospace;
   background: papayawhip;
 }
 
 .logo {
+  align-self: center;
   font-size: 48px;
   font-weight: 900;
   color: tomato;
@@ -14,12 +17,17 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  padding: 10px;
 }
 
 a {
+  display: flex;
   font-size: 22px;
   background: white;
+  color: blue;
   padding: 8px;
+  margin: 5px;
   /* this removes the line under the links */
   text-decoration: none;
 }
