--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,12 +1,12 @@
 .header  {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   font-family: monospace;
   background: papayawhip;
 }
 
 .logo {
-  align-self: center;
   font-size: 48px;
   font-weight: 900;
   color: tomato;
@@ -18,6 +18,7 @@ ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
   display: flex;
+  gap: 8px;
   padding: 10px;
 }
 
@@ -27,7 +28,7 @@ a {
   background: white;
   color: blue;
   padding: 8px;
-  margin: 5px;
+  
   /* this removes the line under the links */
   text-decoration: none;
 }
