--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -9,15 +9,27 @@ body {
 }
 
 .header {
+  display: flex;
+  justify-content: space-between;
   background: white;
+  padding: 8px;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
 }
 
+.right-items,
+.left-items {
+  display: flex; 
+  align-items: center;
+  gap: 16px;
+}
+
 .profile-image {
+  align-self: flex-end;
   background: rebeccapurple;
   box-shadow: inset 2px 2px 4px rgba(0,0,0,.5);
   border-radius: 50%;
+  margin: 16px 0 16px 16px;
   width: 48px;
   height:  48px;
 }
@@ -35,6 +47,7 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  margin: 16px;
 }
 
 a {
@@ -44,5 +57,9 @@ a {
 }
 
 ul {
+  display: flex;
+  padding: 0px;
+  margin: 0;
+  gap: 16px;
   list-style-type: none;
 }
