--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -1,10 +1,51 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 body {
+  display: flex;
+  flex-direction: column;
   height: 100vh;
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+}
+
+.header,
+.footer {
+  display: flex;
+  justify-content: space-between;
+}
+
+ul {
+  list-style: none;
+} 
+
+
+a {
+  text-decoration: none;
+  color: darkgray;
+  font-size: 17px;
+  font-weight: bold;
+}
+
+.right-links,
+.left-links {
+  margin: 15px;
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+}
+
+.content {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer {
+  background-color: #eee;
 }
 
 img {
@@ -13,6 +54,7 @@ img {
 
 button {
   font-family: Roboto, sans-serif;
+  padding: 10px;
   border: none;
   border-radius: 8px;
   background: #eee;
