--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -1,16 +1,55 @@
 body {
+  display: flex;
+  flex-direction: column;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
 }
 
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  margin-bottom: 16px;
+}
+
+span {
+  color: white;
+}
+
+.container {
+  display: flex;
+  flex: 1;
+}
+
+.text {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 32px;
+}
+
 .header {
+  display: flex;
+  align-items: center;
+  font-size: 32px;
+  font-weight: 900;
+  padding: 0 16px;
   height: 72px;
   background: darkmagenta;
   color: white;
 }
 
 .footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 72px;
   background: #eee;
   color: darkmagenta;
@@ -18,11 +57,18 @@ body {
 
 .sidebar {
   width: 300px;
+  text-decoration: none;
+  flex-shrink: 0;
+  font-size: 24px;
   background: royalblue;
+  padding: 16px;
 }
 
 .card {
   border: 1px solid #eee;
+  width: 300px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  margin: 15px;
+  padding: 15px;
 }
