--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -4,6 +4,9 @@ body, html {
 }
 
 .container {
+  display: grid;
+  grid-template: 15% 15% 55% 15% / 30% 70%;
+  
   text-align: center;
   height: 100%;
   padding: 16px;
@@ -20,18 +23,26 @@ body, html {
 }
 
 .header {
+  grid-column: 1 / 3;
+  grid-row: 1 / 2;
   background-color: #FFDE22;
 }
 
 .sidebar {
+  grid-column: 1 / 2;
+  grid-row: 2 / 4;
   background-color: #FF7755;
 }
 
 .nav {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
   background-color: #00DDFF;
 }
 
 .article {
+  grid-column: 2 / 3;
+  grid-row: 3 / 4;
   background-color: #bccbde;
 }
 
@@ -43,5 +54,6 @@ body, html {
 }
 
 .footer {
+  grid-column: 1 / 4;
   background-color: #393f4d;
 }
