--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -5,7 +5,9 @@ body, html {
 
 .container {
   display: grid;
-  grid-template: 15% 15% 55% 15% / 30% 70%;
+  gap: 15px;
+  /* grid-template: 100px 100px 500px 100px / 300px 900px; - Non-responsive*/
+  grid-template: 15% 15% 55% 15% / 30% 70%; /*Responsive*/
   
   text-align: center;
   height: 100%;
@@ -24,12 +26,10 @@ body, html {
 
 .header {
   grid-column: 1 / 3;
-  grid-row: 1 / 2;
   background-color: #FFDE22;
 }
 
 .sidebar {
-  grid-column: 1 / 2;
   grid-row: 2 / 4;
   background-color: #FF7755;
 }
@@ -54,6 +54,6 @@ body, html {
 }
 
 .footer {
-  grid-column: 1 / 4;
+  grid-column: 1 / 3;
   background-color: #393f4d;
 }
