--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -4,6 +4,8 @@
 }
 
 .container {
+  display: grid;
+  grid-template-rows: 10% 1fr;
   text-align: center;
 }
 
@@ -16,16 +18,27 @@
 }
 
 .header {
+  display: grid;
+  grid-template: 1fr / 1fr 4fr;
   background-color: #393f4d;
 }
 
 .logo {
+  height: fit-content;
+  place-self: center start;
+
 }
 
 .menu {
+  width: 80%;
+  place-self: center end;
 }
 
 .menu ul {
+  list-style-type: none;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  
 }
 
 .menu ul,
