--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -4,8 +4,11 @@
 }
 
 .container {
+  height: 100vh;
   display: grid;
-  grid-template-rows: 10% 1fr;
+  gap: 5px;
+  grid-template-columns: 1fr 4fr;
+  grid-template-rows: 2fr 1fr 12fr 1fr;
   text-align: center;
 }
 
@@ -18,6 +21,7 @@
 }
 
 .header {
+  grid-column: 1 / 3;
   display: grid;
   grid-template: 1fr / 1fr 4fr;
   background-color: #393f4d;
@@ -37,7 +41,7 @@
 .menu ul {
   list-style-type: none;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(4, 1fr);
   
 }
 
@@ -48,9 +52,21 @@
 
 .sidebar {
   background-color: #FF7755;
+  grid-column: 1 / 2;
+  grid-row: 2 / span 2;
+
+  display: grid;
+  gap: 50px;
+  grid-template: repeat(4, 1fr) / 1fr;
+  place-items: center center;
 }
 
 .sidebar .photo {
+  height: 80%;
+  width: 80%;
+  display: grid;
+  align-content: center;
+
   background-color: white;
   color: black;
   font-size: 12px;
@@ -62,6 +78,11 @@
 }
 
 .sidebar .side-content {
+  height: 80%;
+  width: 80%;
+  display: grid;
+  align-content: center;
+
   background-color: white;
   color: black;
   font-size: 16px;
@@ -73,6 +94,10 @@
 }
 
 .nav ul {
+  padding: 10px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  list-style-type: none;
 }
 
 .nav ul li {
@@ -81,10 +106,19 @@
 }
 
 .article {
+  grid-row: 3 / 4;
+
+  display: grid;
+  grid-auto-flow: column;
+  grid-auto-columns: 1fr;
+
+  gap: 15px;
+  grid-template: repeat(3, 1fr) / repeat(3, 1fr);
   background-color: #bccbde;
 }
 
 .article p {
+
   font-size: 18px;
   font-family: sans-serif;
   color: white;
@@ -109,6 +143,7 @@
 }
 
 .footer {
+  grid-column: 1 / 3;
   background-color: #393f4d;
 }
 
